--- a/matrizes/index.html
+++ b/matrizes/index.html
@@ -27,10 +27,10 @@
 	<link rel="stylesheet" type="text/css" href="https://jptv.netlify.app/matrizes/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="https://jptv.netlify.app/matrizes/css/structure.css">
 
-	<link rel="stylesheet" type="text/css" href="https://jptv.netlify.app/matrizes/css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://jptv.netlify.app/matrizes/css/media-style.css">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
-	<link rel="stylesheet" type="text/css" href="./mcss.css">	<!-- top menu including option for mobile devices -->
+<!-- top menu including option for mobile devices -->
 	<link rel="stylesheet" type="text/css" href="https://jptv.netlify.app/matrizes/modules/lightbox/dist/css/lightbox.css">	<!-- connect the module to view images -->
 	<link rel="stylesheet" href="https://jptv.netlify.app/matrizes/css/jquery.modal.css" /><!-- modal windows -->
 	
