--- a/jogosdj/single-movie.html
+++ b/jogosdj/single-movie.html
@@ -396,11 +396,10 @@ input[type="text"] {
 
   </div>
          <center>
-      <div class="text-center-xs" style="padding: 2px; max-width: 832px;">
+      <div class="text-center-xs" style="padding: 2px; max-width: 832px; min-height: 480px;">
         <p id="titulo"></p>
          <section class="video bg-silver b-radius-5 padding-5" style="max-width: 832px;">
      
-
           <div id="player"></div>
 
         </div>
