--- a/bandnews/index2.html
+++ b/bandnews/index2.html
@@ -1,23 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="pt-br" class=" js flexbox flexboxlegacy canvas canvastext webgl touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers no-applicationcache svg inlinesvg smil svgclippaths"><head>
   <meta charset="utf-8">
-  <title>Tv Online - Assistir TV Ao Vivo Grátis | JP TV</title>
-  <meta name="description" content="Na TV ONLINE você pode assistir centenas de canais de TV Online. Escolha um canal e assista grátis!">
+  <title>Band News Ao Vivo Online Grátis | JP TV</title>
+  <meta name="description" content="Assistir Band News AO VIVO." />
   <meta name="keywords" content="tv, tv online, tv ao vivo, tvs, tvs ao vivo, webtv, tv internet, canal online, emissora online, streaming de tv, canal de notícias, esportes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:locale" content="pt_BR">
-  <meta property="og:title" content="Tv Online - Assistir TV Ao Vivo Grátis | JPTV">
+  <meta property="og:title" content="Band News Ao Vivo Online Grátis | JPTV">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjJS1q9r7txy5fKC-Dpl8b86LlOlp9Pu86CmdYspGDuhZ0aOaHK_LrMdixHVIUsoDYLEzGQly8zyMe41Dvx8P5-EWpmnPt3LLoCFDKgsUDKaxC3W7ja_pEcCJnGw4OFSqxlaXwRMxWDel6b1JYGzHWV9MIqAjatJvUi6J93qfuh6K73L4LU0ygP7Vr_/w945-h600-p-k-no-nu/logo2.png">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
   <meta name="monetag" content="3bf5e82d8c5ed60b587f1511df86c8b9">
   <meta property="og:url" content="https://jptv.netlify.app/">
-  <meta property="og:site_name" content="Assista na JPTV">
-  <meta property="og:description" content="Na TV ONLINE você pode assistir centenas de canais de TV Online. Escolha um canal e assista grátis!">
-  <meta property="fb:app_id" content="1550659905229085">
+  <meta property="og:site_name" content="Assista Band News na JPTV">
+  <meta property="og:description" content="Assistir Band News AO VIVO." />
+  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
   <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
   <link rel="dns-prefetch" href="//www.google-analytics.com">
   <link rel="preconnect" href="//www.google-analytics.com">
