--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -407,7 +407,7 @@
       
     </script>
 
-    <div class="text-center-xs" id="prim"><center>
+    <div class="text-center-xs" id="prim" style="min-height: 840;"><center>
         <h1 class="bold no-margin medium-3"><i class="fas fa-tv fa-fw"></i>&nbsp;BANDNEWS TV</h1>
     <section class="video bg-silver b-radius-5 padding-5" style="max-width: 832px; min-height: 840;">
             <div id="player">
