--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -423,7 +423,9 @@
         
             
               </div>
+      </section>
             </center></div>
+    </section>
     </section>
      <script>
       function clicou1() {
