--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -458,7 +458,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
 
 
     var video3 = ` <iframe
-    src="https://assistir.webs.vc/embed/fonte2?id=ZWRnZWJhbmRuZXdz"
+    src="https://reidoscanais.com/embed/?id=bandnews"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
