--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -458,7 +458,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
 
 
     var video3 = ` <iframe
-    src="https://reidoscanais.com/embed/?id=bandnews"
+    src="https://playertv.net/tv.php?c=band-news"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
@@ -470,9 +470,9 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
         data-popup="none" 
         frameborder="0"
     > </iframe>`
-
+   
     var video2 = ` <iframe
-    src="https://playertv.net/tv.php?c=band-news"
+    src="https://embedflix.net/tv/bandnews"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
@@ -486,7 +486,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
     > </iframe>`
   
     var video = `<iframe
-    src="https://embedflix.net/tv/bandnews"
+    src="https://playertv.net/c/d.php?id=bandNews"
     width="100%"  
     allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
     target="_blank"
