--- a/globonews2/index.html
+++ b/globonews2/index.html
@@ -474,7 +474,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
         > </iframe>`
   
         var video3 = ` <iframe
-        src="https://jptv.netlify.app/globonews2/index3.html"
+        src="https://plvip.online/myplay/watch.html?id=globoNews"
         width="100%"
     
        allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
