--- a/canalbrasil/index.html
+++ b/canalbrasil/index.html
@@ -465,7 +465,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
         > </iframe>`
   
         var video = `<iframe
-        src="https://reidoscanais.net/embed/?id=canalbrasil"
+        src="https://assistir.webs.vc/embed/fonte1?id=Q0FOQUwgQlJBU0lMIEhE"
         width="100%"
     
         allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
