--- a/jpiptv/index.html
+++ b/jpiptv/index.html
@@ -143,7 +143,7 @@
               <button class="header__menu-item" data-filter=".esportes">Esportes</button>
             </li>
             <li>
-              <button class="header__menu-item" data-filter=".filmesseries">Filmes & Series</button>
+              <button class="header__menu-item" data-filter=".Filmes">Filmes & Series</button>
             </li>
             <li>
               <button class="header__menu-item" data-filter=".jornalismo">Jornalismo</button>
