--- a/jpiptv/index.html
+++ b/jpiptv/index.html
@@ -149,11 +149,11 @@
               <button class="header__menu-item" data-filter=".jornalismo">Jornalismo</button>
             </li>
             <li>
-              <button class="header__menu-item" data-filter=".pluto">PLUTO TV</button>
+              <button class="header__menu-item" data-filter=".agronegocio">Agronegócio</button>
             </li>
 
             <li>
-              <button class="header__menu-item" data-filter=".brasil">BRASIL</button>
+              <button class="header__menu-item" data-filter=".catolica">Católica</button>
             </li>
            
             <li>
