--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -472,7 +472,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
     > </iframe>`
    
     var video2 = ` <iframe
-    src="https://embedflix.net/tv/bandnews"
+    src="https://www.youtube.com/embed?list=UUWijW6tW0iI5ghsAbWDFtTg&playnext=1&index=1"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
