--- a/canais.html
+++ b/canais.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+  <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/agrandec/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjqd0wT1ifl_Iqi8yjHnL1fxoZOGPLuJYct1I6xticDhokPFnDhWNNgKfqcDBtFwjVlqJck855GIo2fJIGvPvPYf-0XDKwG9QQWuSenEBZenRVDOviSxr59KoCGfVS9G4EyBvKPdPenvS_Ybx7_phmfW1fNPxVgyq8rgtzdPW5SlJAxUO7DPIHHmqR8JrQ/s1600/A_Grande_Conquista_2.jpg" class="m-t-10 b-radius-5 img-responsive center-block" style="width: 140px; height: 140px;" alt="A GRANDE CONQUISTA 2" /><p class="resumoDots p-t-15 p-b-5 no-margin text-center bold">A GRANDE CONQUISTA 2</p></a></div> 
+
   <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/bbb24/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiuJQb-omt-hf1NbvF9QA-4rPc5MMnHu8cqkrwoa3HzhjIZ1dkW5-Ds1b93nrww5F3Jntwx7eywLtPXiui39rxBDUd6f8aT16P6HRHfD58pdA_9W06vWBQdFFYMPUdv8FgqR2vcm1OAL222Oe9GFk_Kvo8AHDq00AWX2ksmM9CngmYehEYhu6AbhMlHJDg/s1600/bbb-24.webp" class="m-t-10 b-radius-5 img-responsive center-block" style="width: 140px; height: 140px;" alt="BBB 24" /><p class="resumoDots p-t-15 p-b-5 no-margin text-center bold">BBB 24</p></a></div>
 
 <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/combate/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgN2AUVTgnqOnCB5WE26L4lRK7CNLTPBJOhsIKfRO5WWoVT1WfGcm8Hpyc-lIMETvN2kncSRdiFe1iAKlvfx-VDQf3ePu9NXgC7u7L8zIb0No3T8pIymgbXsAj3x3F3_AmC3xWDI3CPWwMU2f9O32jmOrU8zB34Ik5ktG_QMHC4d7cVtXw_h7kk7Bg-SYA/s1600/combate.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="COMBATE" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">COMBATE</h4></a></div>  
