--- a/jogosdj/index.html
+++ b/jogosdj/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br" class=" js flexbox flexboxlegacy canvas canvastext webgl touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers no-applicationcache svg inlinesvg smil svgclippaths"><head>
   <meta charset="utf-8">
   <title>JOGOS DE HOJE Ao Vivo Online Grátis | JP TV</title>
-  <meta name="description" content="Assista os principais jogos de futebol do mundo ao vivo grátis." />
-  <meta name="keywords" content="Assista os principais jogos de futebol do mundo ao vivo grátis.">
+  <meta name="description" content="Assista hoje os principais jogos de futebol do mundo ao vivo grátis." />
+  <meta name="keywords" content="Assista hoje os principais jogos de futebol do mundo ao vivo grátis.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:locale" content="pt_BR">
@@ -14,8 +14,8 @@
   <meta property="og:image:height" content="200">
   <meta name="monetag" content="3bf5e82d8c5ed60b587f1511df86c8b9">
   <meta property="og:url" content="https://jptv.netlify.app/">
-  <meta property="og:site_name" content="Assista os principais jogos de futebol do mundo ao vivo grátis.">
-  <meta property="og:description" content="Assista os principais jogos de futebol do mundo ao vivo grátis." />
+  <meta property="og:site_name" content="Assista hoje os principais jogos de futebol do mundo ao vivo grátis.">
+  <meta property="og:description" content="Assista hoje os principais jogos de futebol do mundo ao vivo grátis." />
   <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js" as="script">
