--- a/canais.html
+++ b/canais.html
@@ -185,6 +185,7 @@
            <h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">TV GUAJARÁ</h4></a> </div>
    
            <div class="col-sm-2 col-xs-4"><a href="https://livepush.io/embed/emVqPK2sSrR_sJM" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjv78ELmWlx2XGE2fxoGCeUcEGMRVC1g3KRjMxxeNbL6KSLHIMkfkcsvpA4gzCzJSiiXU9K91eFEXab0Lld90yb6krtlHCoAaXZqt66PAgl46aR2XoeQZ6mJGLzQFV8frq-y-qF9-ilvJ4CGSV6ekiS096mHhVxVWv8yxx2CcVqCnC2cFpYp9jJoXyT/s1600/floresta2.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="TV Floresta (SBT PARÁ)" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">TV Floresta (SBT PARÁ)</h4></a> </div> 
+
            <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/foxsport2" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg5eFdFY2iUCHr0A14QbUBzFnHZhVfZ1oJ7Xnm0JiAdV2ZtQs_5s61QEqtFpYkq87CreZUP_hSvtPQm8ImwWDQJG0uatymUMs09xZy4_szPfPqnibW3PzoRzkompFh13uklLHZK_hIzpQ8NBPhMYj97xfCQGhPM3-cQDpe9_u-l4cAfCGIdWyDnBLXR0Q4/s1600/download.jpeg" class="m-t-10 b-radius-5 img-responsive center-block" alt="FOX SPORTS 2" />
             <h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">FOX SPORTS 2</h4></a></div>
 
@@ -206,15 +207,11 @@
 
 <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/modoviagem/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiCbBYogW0-MC768TRSxpMemTdrgTQMR577EttT-Z46GLOfz506YpTXyB96WfP0hBrBEcGExhSejf5Wwumu80vkg14TFsXWw52qarW_qM0rcLFrPRWJ3nel2R2k_tjjsG3t1Jb_bKLmG_cuPU0MwOp8nhL0Bc0-jeICARaIU3m2rhjYk1v4kFjnhjD8k6c/s1600/modov.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="MODO VIAGEM" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">MODO VIAGEM</h4></a> </div> 
 
-  
-   
+<div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/multicanais/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh-T-vAB8AMd2t3_yToKRczqSWVhl3Tx8erfPecy-0T1cOq3M7iPUtsljRfeP_xKjRKpIl2vfy2HkbxCuhyphenhyphenbu7l-hVXPL4DcBzv203lTGWErsi4r7xXcWR9b_yAadji1mixaFfIbxaXt71Q9leayjlvtJGB0uzs7GF0rfK5ytqhATRnZvd_PJj2Uzg1D6E/s1600/mutlca.webp"  class="m-t-10 b-radius-5 img-responsive center-block" style="width: 140px; height: 140px;" alt="Multi Canais" /><p class="resumoDots p-t-15 p-b-5 no-margin text-center bold">Multi Canais</p></a></div>
+     
 
 
-                 <div class="col-sm-2 col-xs-4">
-                   <a href="https://jptv.netlify.app/discovery-channel-hd/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgLIINbLAn-jvT0NBcFxfCBRsYT8HRC0IBoz4Pqnmz4bk3Zc9pyoaWHFlsilJ_EVg_MJOdFfHrYIW4fsfXB8tIr-VIdH-_dtjkQBglnAqe4FDdSHBj68SseNvenh8kVzR_0pEfBB1I3WLO7BNL2GpKiSpZZPNLfxiDtXT0Y0T5GF1oOSvds3BoZ-Asp/s1600/disco.jpg"  class="m-t-10 b-radius-5 img-responsive center-block" alt=" Discovery Channel" />
-                     <h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold"> Discovery Channel</h4>
-                   </a>
-                 </div>
+<div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/discovery-channel-hd/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgLIINbLAn-jvT0NBcFxfCBRsYT8HRC0IBoz4Pqnmz4bk3Zc9pyoaWHFlsilJ_EVg_MJOdFfHrYIW4fsfXB8tIr-VIdH-_dtjkQBglnAqe4FDdSHBj68SseNvenh8kVzR_0pEfBB1I3WLO7BNL2GpKiSpZZPNLfxiDtXT0Y0T5GF1oOSvds3BoZ-Asp/s1600/disco.jpg"  class="m-t-10 b-radius-5 img-responsive center-block" alt=" Discovery Channel" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold"> Discovery Channel</h4></a></div>
    
                  <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/discoveryheh/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEidoXVZqt3QpdLGDLLyfVVzpebeXaK3KqMFJqG8EJUZwTaexuO6w5xL1OpLsz60eq5PMpe2LFbxs_znlBP_OHESriAxD4QE8ASpgoRhNalpob_1op1A-DIIez_Uwvylxpcx_7ii76hhywNWImWiQ9raJzhSdnfPtZYkW_jCLyiAFFRDxUyaPqqcQqgx/s1600/heh.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="Discovery Home & Health" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">Discovery Home & Health</h4></a></div>
    
