--- a/cnn/index.html
+++ b/cnn/index.html
@@ -473,7 +473,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
         > </iframe>`
   
         var video3 = ` <iframe
-        src="https://playertv.net/tv.php?c=cnn"
+        src="https://embedmax.site/tvl/cnnbrasil.php"
         width="100%"
     
        allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
