--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -458,7 +458,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
 
 
     var video3 = ` <iframe
-    src="https://playertv.net/tv.php?c=band-news"
+    src="https://embedmax.site/tvl/bandnews2.php"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
@@ -472,7 +472,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
     > </iframe>`
    
     var video2 = ` <iframe
-    src="https://www.youtube.com/embed?list=UUWijW6tW0iI5ghsAbWDFtTg&playnext=1&index=1"
+    src="https://embedmax.site/tvl/bandnews.php"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
@@ -486,7 +486,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
     > </iframe>`
   
     var video = `<iframe
-    src="https://playertv.net/c/d.php?id=bandNews"
+    src="https://reidoscanais.app/embed/?id=bandnews"
     width="100%"  
     allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
     target="_blank"
