--- a/jovempann/index.html
+++ b/jovempann/index.html
@@ -464,7 +464,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
           > </iframe>`
         
           var video = `<iframe
-          src="https://playertv.net/tv.php?c=jovem-pan"
+          src="https://embedmax.site/tvl/jovempan.php"
           width="100%"
       
           allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
