--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -66,6 +66,7 @@ input[type="button"].active {
 }
 #player {
     aspect-ratio: 16/9;
+    background-image: url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQqql4v_hmKAaxCMwezLJt7N8w2JxRr6C8zQumZB_FLiP_VMLVsvBhJrZCrb4IF8w20UbV79SQ5U_rDqqwdwMfWj6I4xZiiT5PObT1vFmJ4lULrKcr7BZ0gotoq4mFIwku1jiinBzY4w_F0sLlqtUg5ojKSdz17RFzGAQoqzDfg0umMPx-8QeXnzzLuJM/s400/JPTVOP.png);
      border: none;
      max-width: 832px;
      max-height:480px;
