--- a/futura/index.html
+++ b/futura/index.html
@@ -405,7 +405,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
         <h1 class="bold no-margin medium-3"><i class="fas fa-tv fa-fw"></i>&nbsp;CANAL FUTURA</h1>
       <section class="video bg-silver b-radius-5 padding-5" style="max-width: 832px;">
         <iframe class="lazyload"
-    src="https://playertv.net/tv.php?c=futura"
+    src="https://reidoscanais.eu/embed/?id=futura"
     width="100%" allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
     target="_blank"
         scrolling="no"
