--- a/multicanais/index.html
+++ b/multicanais/index.html
@@ -406,7 +406,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
       <section class="video bg-silver b-radius-5 padding-5" style="max-width: 832px;">
         <video controls crossorigin playsinline style="background-color: black;">
         
-          <source src="https://stmv1.srvif.com/multicanais/multicanais/playlist.m3u8" type="application/x-mpegURL" />
+          <source src="https://stmv4.voxtvhd.com.br/multicanais/multicanais/playlist.m3u8" type="application/x-mpegURL" />
         </video>
     </section>
             </div>  
