--- a/canais.html
+++ b/canais.html
@@ -320,7 +320,7 @@
    
              <div class="col-sm-2 col-xs-4">
                <a href="https://jptv.netlify.app/hboplus/" class="m-b-20 btn btn-white btn-block">
-               <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgE05R-8IZF4a5TpmblUcsecNcr3EWZXpoLl3hMSXJ7AnsXdVD93Bav890JzVy8zDuMy4Q-cH-PpHBNlzBjgk7SbEZ9o63Md53hH95Il3KFQEGSvqX0q3vvPY_vmU7xcczbd4hAIlFUnhh4Jv-DdUZbZLM9LlBZefSV9HTgEgTsH1-D7iQW5rEKNnat/s1600/hboplus.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="HBO PLUS" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">HBO PLUS</h4></a></div>
+               <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjvNm96ykVKQHacG7M7K0PPt9gQMga_pTgFrOld11xy3A3IB2cZwSODZJ5HOB38cHjt2PvkLx1LvoO3JdLoIktzi-GEhoznqNJmnKJZOKH9C7KYabpp8N5ogEr2k9L891vn4q0kaQ1_DEbq1P6pO5O2LhodI7nopo6UYoC48zc2Xu_mSEFCarLM82WQT_I/s1600/hboplus.jpg" class="m-t-10 b-radius-5 img-responsive center-block" alt="HBO PLUS" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">HBO PLUS</h4></a></div>
    
                <div class="col-sm-2 col-xs-4">
                  <a href="https://jptv.netlify.app/megapix/" class="m-b-20 btn btn-white btn-block">
