--- a/telecineac/index.html
+++ b/telecineac/index.html
@@ -459,7 +459,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
 
 
     var video3 = ` <iframe
-    src="https://embedmax.site/tvl/bandnews2.php"
+    src="https://reidoscanais.eu/embed/?id=telecineaction"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
@@ -473,7 +473,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
     > </iframe>`
    
     var video2 = ` <iframe
-    src="https://reidoscanais.eu/embed/?id=telecineaction"
+    src="https://embedmax.site/tvl/tcaction2.php"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
