--- a/classicosc/index.html
+++ b/classicosc/index.html
@@ -407,7 +407,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
       <section class="video bg-silver b-radius-5 padding-5" style="max-width: 832px;">
         <video controls crossorigin playsinline style="background-color: black;">
         
-          <source src="https://rpn3.bozztv.com/ssh101/ssh101/classicosdocinema/playlist.m3u8" type="application/x-mpegURL" />
+          <source src="https://stmv1.srvif.com/movies1/movies1/playlist.m3u8" type="application/x-mpegURL" />
         </video>
     </section>
             </div>  
