--- a/canais.html
+++ b/canais.html
@@ -418,7 +418,7 @@
              </a>
            </div>
    
-
+           <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/afazenda/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgoE19RFb0a0w-IjKKmi-UvsOx1ku7jD9l6uWWgIPpjN88DUgZ3CssVrR2ulQR7RHv8Mka44PGFi0kBs1qxy-z3lRuJJZuyRxT2u3VqsX7zhGxt_izEWfgKpg7kyy24OHSiyh38RwRUKco8qt8WzpbH-MroF2pATBV_8xBAOuXwDJcTFKANNrY7prlh20E/s1600/a-fazenda-16-ao-vivo.png" class="m-t-10 b-radius-5 img-responsive center-block" style="width: 140px; height: 140px;"/><p class="resumoDots p-t-15 p-b-5 no-margin text-center bold">A FAZENDA</p></a></div>
    
    <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/cartonn/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg6Wagdz5uJebGsuARNLwRMFFt5K_oTE9dFSb0mOM4O0IL5V7oVzMnc9cpLm5hEBk0a06Vjk_SiFgWij0XS9lySXCYDHAwcAl2hpiaeKPeW7fX2OjUlNJ3FP8CK2cr_ihEE8DZioPGYBUikjY4EZwtkxY-izFw0usKvAtYGN2zq95OGkOJuF0fnN-MiGOs/s1600/cartoon-network5178.jpg"  class="m-t-10 b-radius-5 img-responsive center-block" alt="CARTOON NETWORK" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">CARTOON NETWORK</h4></a></div>
    
