--- a/entretenimento.html
+++ b/entretenimento.html
@@ -379,6 +379,8 @@ input[type="text"] {
           
           <div class="row min-gutter">
 
+            <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/afazenda/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgoE19RFb0a0w-IjKKmi-UvsOx1ku7jD9l6uWWgIPpjN88DUgZ3CssVrR2ulQR7RHv8Mka44PGFi0kBs1qxy-z3lRuJJZuyRxT2u3VqsX7zhGxt_izEWfgKpg7kyy24OHSiyh38RwRUKco8qt8WzpbH-MroF2pATBV_8xBAOuXwDJcTFKANNrY7prlh20E/s1600/a-fazenda-16-ao-vivo.png" class="m-t-10 b-radius-5 img-responsive center-block" style="width: 140px; height: 140px;"/><p class="resumoDots p-t-15 p-b-5 no-margin text-center bold">A FAZENDA</p></a></div>
+
 <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/agrandec/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjqd0wT1ifl_Iqi8yjHnL1fxoZOGPLuJYct1I6xticDhokPFnDhWNNgKfqcDBtFwjVlqJck855GIo2fJIGvPvPYf-0XDKwG9QQWuSenEBZenRVDOviSxr59KoCGfVS9G4EyBvKPdPenvS_Ybx7_phmfW1fNPxVgyq8rgtzdPW5SlJAxUO7DPIHHmqR8JrQ/s1600/A_Grande_Conquista_2.jpg" class="m-t-10 b-radius-5 img-responsive center-block" style="width: 140px; height: 140px;" alt="A GRANDE CONQUISTA 2" /><p class="resumoDots p-t-15 p-b-5 no-margin text-center bold">A GRANDE CONQUISTA 2</p></a></div> 
 
 
