--- a/afazenda/index.html
+++ b/afazenda/index.html
@@ -416,6 +416,12 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
                 <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="opção 4" onclick="clicou4()" id="botao4"></a>
                 <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="opção 5" onclick="clicou5()" id="botao5"></a>
                 <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="opção 6" onclick="clicou6()" id="botao6"></a>
+                <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="Cam 1" onclick="clicou7()" id="botao7"></a>
+                <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="Cam 2" onclick="clicou8()" id="botao8"></a>
+                <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="Cam 3" onclick="clicou9()" id="botao9"></a>
+                <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="Cam 4" onclick="clicou10()" id="botao10"></a>
+                <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="Cam 5" onclick="clicou11()" id="botao11"></a>
+                <a class="btn btn-primary btn-sm" href="#" style="padding: 5px;"><input type="button" value="Cam 6" onclick="clicou12()" id="botao12"></a>
 
 
         
@@ -462,6 +468,42 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
       player.innerHTML = video6
     }
 
+    function clicou7() {
+      removerAtivo();
+      document.getElementById("botao7").classList.add("active");
+      player.innerHTML = video7
+    }
+
+    function clicou8() {
+      removerAtivo();
+      document.getElementById("botao8").classList.add("active");
+      player.innerHTML = video8
+    }
+
+    function clicou9() {
+      removerAtivo();
+      document.getElementById("botao9").classList.add("active");
+      player.innerHTML = video9
+    }
+
+    function clicou10() {
+      removerAtivo();
+      document.getElementById("botao10").classList.add("active");
+      player.innerHTML = video10
+    }
+
+    function clicou11() {
+      removerAtivo();
+      document.getElementById("botao11").classList.add("active");
+      player.innerHTML = video11
+    }
+
+    function clicou12() {
+      removerAtivo();
+      document.getElementById("botao12").classList.add("active");
+      player.innerHTML = video12
+    }
+
 
 
 
@@ -478,6 +520,90 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
   
   
 
+
+    var video12 = ` <iframe
+    src="https://reidoscanais.me/embed/?id=afazenda16-6"
+    width="100%"
+
+   allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
+    target="_blank"
+        scrolling="no"
+        data-draggable="none"
+        marginwidth="0"
+        marginheight="0"
+        data-popup="none" 
+        frameborder="0"
+    > </iframe>`
+
+    var video11 = ` <iframe
+    src="https://reidoscanais.me/embed/?id=afazenda16-5"
+    width="100%"
+
+   allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
+    target="_blank"
+        scrolling="no"
+        data-draggable="none"
+        marginwidth="0"
+        marginheight="0"
+        data-popup="none" 
+        frameborder="0"
+    > </iframe>`
+
+    var video10 = ` <iframe
+    src="https://reidoscanais.me/embed/?id=afazenda16-4"
+    width="100%"
+
+   allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
+    target="_blank"
+        scrolling="no"
+        data-draggable="none"
+        marginwidth="0"
+        marginheight="0"
+        data-popup="none" 
+        frameborder="0"
+    > </iframe>`
+
+    var video9 = ` <iframe
+    src="https://reidoscanais.me/embed/?id=afazenda16-3"
+    width="100%"
+
+   allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
+    target="_blank"
+        scrolling="no"
+        data-draggable="none"
+        marginwidth="0"
+        marginheight="0"
+        data-popup="none" 
+        frameborder="0"
+    > </iframe>`
+
+    var video8 = ` <iframe
+    src="https://reidoscanais.me/embed/?id=afazenda16-2"
+    width="100%"
+
+   allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
+    target="_blank"
+        scrolling="no"
+        data-draggable="none"
+        marginwidth="0"
+        marginheight="0"
+        data-popup="none" 
+        frameborder="0"
+    > </iframe>`
+
+    var video7 = ` <iframe
+    src="https://reidoscanais.me/embed/?id=afazenda16"
+    width="100%"
+
+   allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
+    target="_blank"
+        scrolling="no"
+        data-draggable="none"
+        marginwidth="0"
+        marginheight="0"
+        data-popup="none" 
+        frameborder="0"
+    > </iframe>`
 
     var video6 = ` <iframe
     src="https://embedmax.site/tvl/afazenda6.php"
