--- a/canais.html
+++ b/canais.html
@@ -521,7 +521,7 @@
               <h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">TV CINEPLAY</h4></a> 
             </div>
             <div class="col-sm-2 col-xs-4">
-              <a href="https://jptv.netlify.app/tvmaceio/index2.html" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjID0SWIibT36izNpau-f6eZ5TEqWdEOtPUhMcMDQu6xxkKwTS6eS3pBdW6Vcfo80V3OhZTInIJk-c_JpIqw6YdvTjPanTHyL15AWVp86wGvkmcorvsm432qthIRm-nHo12JR1rqyRaOrpEqbk_XgkotgR9zD-iMV93nhjnCOokuHNFV2g1AJz-C5yv/w945-h600-p-k-no-nu/tvmaceio2.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="TV MACEIÓ" />
+              <a href="https://jptv.netlify.app/tvmaceio/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjID0SWIibT36izNpau-f6eZ5TEqWdEOtPUhMcMDQu6xxkKwTS6eS3pBdW6Vcfo80V3OhZTInIJk-c_JpIqw6YdvTjPanTHyL15AWVp86wGvkmcorvsm432qthIRm-nHo12JR1rqyRaOrpEqbk_XgkotgR9zD-iMV93nhjnCOokuHNFV2g1AJz-C5yv/w945-h600-p-k-no-nu/tvmaceio2.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="TV MACEIÓ" />
                 <h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">TV MACEIÓ</h4></a>    
               </div>  
               <div class="col-sm-2 col-xs-4">
