--- a/canais.html
+++ b/canais.html
@@ -442,7 +442,7 @@
    
    <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/sporttv3/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhllQeaY17qvucwKZJw6n76kosGHgvU6dmFrFQJRRit5wSEcwt5FrubtIaJZmYulQcbW3HcfxB42Za0E99SaYcvMwLti0i9VKIjMtvMH1Juex9Ym05I0U87z91kDF3i8XuW6oczWTHyphGmVJwOzBVkBCCoBlMFScCB_klowE8dnY37bOJkXLbuMKPi/s1600/lg-237-canal-sportv-3-hd.png" class="m-t-10 b-radius-5 img-responsive center-block" alt="Sportv" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">Sportv 3</h4></a></div>
    
-   
+   <div class="row min-gutter"><div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/amazon-sat-amazonas/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgY39zvWEvo47xpFuJw5g_BnDQAgCaPWBX7bVOPqAFONGe73RI3sVsMW1Zg1Vs4g0tdQB8NbIzODvTB-OuMO4zZtSqUBP1tWZEhX_SDCf6ALsP6VUDpGhEyovQEsU9tz9kn_0Kn3p4Wkd48Cx9R1XVDsy17y1Y0T2PDPoUIbYlY-tD2lyKsBpPT9lg142U/s1600/amazonsat.jpg" class="m-t-10 b-radius-5 img-responsive center-block" alt="Amazon Sat - Amazonas" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">Amazon Sat - Amazonas</h4></a></div>  
    
    <div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/primesports/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjBcuH_CT3QdKAHX8-w8U4UzAjc9GX-0j_NZmCqvKjh7uNiybtpCtDaInje1A9nfXlJDBRlZtYlcO5Uj9LPEURcGpbMOduFNBJK92Q3Qe0eXHrTnWlSmTMbGoguJcIOURX1K_tYnUy6SSZHn_Z88iwpCN11NF5kY42D8VfNna4AUJviNVqPs3nbkAHT/s1600/512x512bb.jpg" class="m-t-10 b-radius-5 img-responsive center-block" alt="Prime Tv" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">Prime TV</h4></a></div>
    
