--- a/Amazonas.html
+++ b/Amazonas.html
@@ -414,15 +414,9 @@
       <section class="bg-primary p-t-40 p-b-40">
 <div class="container">
 
-  <div class="row min-gutter">
-    <div class="col-sm-2 col-xs-4">
-      <a href="https://jptv.netlify.app/classicosc/" class="m-b-20 btn btn-white btn-block">
-      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhkGU-8Az1ZDI55cwcAUxOfpObi2p1DECpn2Gvcax95iChBORfULNjLgg1UmfG2iJA2hRtbp8a9SIYjiL6UX8jvq-FhbICXZwCUqRnDteurt-YHC_2PPHTp_jILFPGIkrIcqi3qwk8T1awyqhTaqXGBzhwmmB-EcslS9bgcHZwRabeKJfZfRx9PhInL/s1600/classicoc.jpg" class="m-t-10 b-radius-5 img-responsive center-block" alt="classicodocinema" />
-      <h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">WEB TV CLÁSSICOS DO CINEMA</h4>
-
-
-      </a>
-      </div>   
+  <div class="row min-gutter"><div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/classicosc/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhkGU-8Az1ZDI55cwcAUxOfpObi2p1DECpn2Gvcax95iChBORfULNjLgg1UmfG2iJA2hRtbp8a9SIYjiL6UX8jvq-FhbICXZwCUqRnDteurt-YHC_2PPHTp_jILFPGIkrIcqi3qwk8T1awyqhTaqXGBzhwmmB-EcslS9bgcHZwRabeKJfZfRx9PhInL/s1600/classicoc.jpg" class="m-t-10 b-radius-5 img-responsive center-block" alt="classicodocinema" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">WEB TV CLÁSSICOS DO CINEMA</h4></a></div>  
+  
+  <div class="row min-gutter"><div class="col-sm-2 col-xs-4"><a href="https://jptv.netlify.app/amazon-sat-amazonas/" class="m-b-20 btn btn-white btn-block"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgY39zvWEvo47xpFuJw5g_BnDQAgCaPWBX7bVOPqAFONGe73RI3sVsMW1Zg1Vs4g0tdQB8NbIzODvTB-OuMO4zZtSqUBP1tWZEhX_SDCf6ALsP6VUDpGhEyovQEsU9tz9kn_0Kn3p4Wkd48Cx9R1XVDsy17y1Y0T2PDPoUIbYlY-tD2lyKsBpPT9lg142U/s1600/amazonsat.jpg" class="m-t-10 b-radius-5 img-responsive center-block" alt="Amazon Sat - Amazonas" /><h4 class="resumoDots p-t-15 p-b-5 no-margin text-center bold">Amazon Sat - Amazonas</h4></a></div>  
       
       <div class="col-sm-2 col-xs-4">
         <a href="https://jptv.netlify.app/boasnovasa/" class="m-b-20 btn btn-white btn-block">
