--- a/index.html
+++ b/index.html
@@ -526,7 +526,12 @@
   </div>
   </div>
   </section>
-  
+  <form action="https://www.paypal.com/donate/?hosted_button_id=YVQ4JYWWPJVNS" method="post" target="_blank" style="text-align: center;">
+    <h3>Ajude a manter nossos projetos</h3>
+    <input type="hidden" name="hosted_button_id"/>
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+    <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+    </form>
   <footer class="text-center-xs text-center-sm  bg-dark text-white p-t-50 p-b-10">
     <div class="container">
   
