--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link href="https://jptv.netlify.app/css/infinitta.min.css" rel="stylesheet">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" type="text/javascript"></script>
-
+<meta name="ppck-ver" content="954055d56aa0faa91178566d370b3ba4" />
 
   <script type="text/javascript">
           var urlSite = "https://jptv.netlify.app/";
