--- a/index.html
+++ b/index.html
@@ -392,6 +392,12 @@
       
       
     </script> 
+    <script type="text/javascript">
+      var uid = '487929';
+      var wid = '736351';
+      var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+      pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+   </script>
      <center>
      <div class="text-center-xs" style="padding: 2px;">
       <h1 class="bold no-margin medium-3"><i class="fas fa-tv fa-fw"></i>&nbsp;CANAIS DE JORNALISMO</h1> </center>
