--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -402,6 +402,12 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
       
       
     </script>
+   <script type="text/javascript">
+    var uid = '487929';
+    var wid = '736351';
+    var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+    pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+ </script>   
       <div class="text-center-xs" id="prim"><center>
         <h1 class="bold no-margin medium-3"><i class="fas fa-tv fa-fw"></i>&nbsp;BANDNEWS TV</h1>
     <section class="video bg-silver b-radius-5 padding-5" style="max-width: 832px;">
@@ -459,7 +465,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
 
 
     var video3 = ` <iframe
-    src="https://embedmax.site/tvl/bandnews2.php"
+    src="https://embedmax.site/tvl/globonews.php?"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
@@ -473,7 +479,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
     > </iframe>`
    
     var video2 = ` <iframe
-    src="https://embedmax.site/tvl/bandnews.php"
+    src="https://reidoscanais.cc/embed/?id=bandnews"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
@@ -487,7 +493,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
     > </iframe>`
   
     var video = `<iframe
-    src="https://reidoscanais.app/embed/?id=bandnews"
+    src="https://embedcanaistv.com/bandnews"
     width="100%"  
     allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
     target="_blank"
