--- a/bandnews/index.html
+++ b/bandnews/index.html
@@ -465,7 +465,7 @@ margin-right: 20px; /* Adicione espaço à direita para separar outros itens */
 
 
     var video3 = ` <iframe
-    src="https://embedmax.site/tvl/globonews.php?"
+    src="https://embedmax.site/tvl/bandnews.php?"
     width="100%"
 
    allow="autoplay; encrypted-media; fullscreen; pincture in pincture"
